# sc-takehome

./: Makefile  README.md  pyproject.toml  requirements.txt
src/: download.py  queries.py  report.py  transform.py
